# ghostty-rice

./: .gitignore  LICENSE  README.md  README_ZH.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
ghostty_rice/: __init__.py  cli.py  colors.py  fonts.py  paths.py  platform.py  preview.py  profile.py  prompt.py  reload.py  studio.py
ghostty_rice/presets/: Catppuccin Mocha  Codex  Cyber  Dracula  Everforest  Frosted  Gruvbox  Minimal  Nord  One Dark Pro  Rose Pine  Solarized  Tokyo Night  manifest.toml
ghostty_rice/skill/: __init__.py  ghostty-theme.md
src/ghostty_rice/: __init__.py  cli.py  profile.py
src/ghostty_rice/presets/: catppuccin-mocha.conf  cyber.conf  frosted.conf  minimal.conf  rosepine.conf
tests/unit/: test_cli.py  test_fonts.py  test_paths.py  test_platform.py  test_profile.py  test_prompt.py  test_studio.py
