[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghostty-rice"
version = "0.1.0"
description = "Full visual profile manager for Ghostty terminal — beyond just colors."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "jayleonc" }]
keywords = ["ghostty", "terminal", "theme", "rice", "customization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
rice = "ghostty_rice.cli:cli"

[project.urls]
Homepage = "https://github.com/jayleonc/ghostty-rice"
Repository = "https://github.com/jayleonc/ghostty-rice"
Issues = "https://github.com/jayleonc/ghostty-rice/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
